--- a/farg.html
+++ b/farg.html
@@ -32,7 +32,7 @@ https://templatemo.com/tm-518-sentra
 
             <section id="projects" class="content-section">
                 <div class="section-heading">
-                    <h1><em>Andijon</em></h1>
+                    <h1><em>Farg'ona</em></h1>
                     <p>Galareya</p>
                 </div>
                 <div class="section-content">
@@ -40,19 +40,10 @@ https://templatemo.com/tm-518-sentra
                         <div class="row">
                             <div class="item">
                                 <div class="col-md-8">
-                                    <a href="img/gal1.jpg" data-lightbox="image"><img src="img/gal1.jpg" alt="image 1"></a>
+                                    <a href="img/far.jpg" data-lightbox="image"><img src="img/far.jpg" alt="image 1"></a>
                                 </div>
                             </div>
-                            <div class="item second-item">
-                                <div class="col-md-4">
-                                    <a href="img/gal2.jpg" data-lightbox="image"><img src="img/gal2.jpg" alt="image 2"></a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-4">
-                                    <a href="img/gal3.jpg" data-lightbox="image"><img src="img/gal3.jpg" alt="image 3"></a>
-                                </div>
-                            
+                           
                             </div>
                         </div>
                     </div>
@@ -72,7 +63,7 @@ https://templatemo.com/tm-518-sentra
                     </div>
                     <div class="col-md-12">
                         <div class="box-video">
-                            <div class="bg-video" style="background-image: url(img/and.jpg);">
+                            <div class="bg-video" style="background-image: url(img/far.jpg);">
                                 <div class="bt-play">Play</div>
                             </div>
                             <div class="video-container">
