--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-518-sentra
                     <div class="info">
                         <div>
                           <h1>Green Book</h1>
-                          <p>Dunyo bo'ylab sayohatda yordamchingiz.</p>
+                          <p>O'zingiz uchun yangi manzillarni kashf eting.</p>
                           <div class="white-button button">
                               <a href="b.html">Boshlash</a>
                           </div>
@@ -79,10 +79,11 @@ https://templatemo.com/tm-518-sentra
                         <div class="info">
                         <div>
                           <h1>Green Book</h1>
-                          <p>Real vaqtdagi online tarjimon.</p>
+                          <p>O'zingiz uchun yangi manzillarni kashf eting.</p>
                           
                           <div class="white-button button">
-                              <a href="trans.html">Sinab ko'rish</a>
+                            <script src="Parrot-master/app.js"></script>
+                              <a href="Parrot-master/routes/index.js">Boshlash</a>
                           </div>
                         </div>
                         </div>
